--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>block2001_manhattan</title>
+    <title>block#610</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        block2001_manhattan
+                        block#610
                     </a>
                 </li>
                 <li><a href="#Text1">History</a></li>
@@ -74,19 +74,19 @@
                               <!-- Wrapper for slides -->
                               <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                  <img src="C:\Users\jlc22\Documents\bootstrap\startbootstrap-simple-sidebar-1.0.5\images\3333_broadway.jpg" alt="broadway">
+                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
                                 </div>
 
                                 <div class="item">
-                                  <img src= "C:\Users\jlc22\Documents\bootstrap\startbootstrap-simple-sidebar-1.0.5\images\133_12av_1933NE.jpg" alt="133rdNE">
+                                  <img src= "images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
                                 </div>
 
                                 <div class="item">
-                                  <img src="C:\Users\jlc22\Documents\bootstrap\startbootstrap-simple-sidebar-1.0.5\images\133_broadway_1915SE.jpg" alt="133_broadwaySE">
+                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
                                 </div>
 
                                 <div class="item">
-                                  <img src="C:\Users\jlc22\Documents\bootstrap\startbootstrap-simple-sidebar-1.0.5\images\134_broadway_1900SW.jpg" alt="134_broadway">
+                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
                                 </div>
 
                               </div>
@@ -110,7 +110,7 @@
                         <h4>Demographics</h4>
                         <h4>Land Use Summary</h4>
                         <h3 id="Text5">Sources</h3>
-                        <iframe width="100%" height="800" frameborder="0" src="https://jlc2270.cartodb.com/viz/3e1083fc-cb60-11e5-8dc9-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        <iframe width="100%" height="800" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/ca6c6ef6-d06f-11e5-865e-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                     </div>
                 </div>
             </div>
