--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                               <!-- Wrapper for slides -->
                               <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
+                                  <img src="images\1928stompingground.jpg" alt="1928stompingground">
                                 </div>
 
                                 <div class="item">
