--- a/index.html
+++ b/index.html
@@ -78,17 +78,21 @@
                                 </div>
 
                                 <div class="item">
-                                  <img src= "images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
+                                  <img src= "images\stonewall_NYPL2.jpg" alt="stonewall_NYPL2">
                                 </div>
 
                                 <div class="item">
-                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
+                                  <img src="images\stonewall_NYPL.jpg" alt="stonewall_NYPL">
                                 </div>
 
                                 <div class="item">
-                                  <img src="images\IMAGE_NAME.jpg" alt="IMAGE_NAME">
+                                  <img src="images\Stonewall_riots.jpg" alt="Stonewall_riots">
                                 </div>
-
+                                
+                                <div class="item">
+                                  <img src="images\610GoogleStreetView.jpg" alt="610GoogleStreetView">
+                                  
+                                </div>
                               </div>
 
                               <!-- Left and right controls -->
