--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <h4>Land Use Summary</h4>
                         <h3 id="Text5">Sources</h3>
                         <iframe width="100%" height="800" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/ca6c6ef6-d06f-11e5-865e-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/b719ea40-026f-11e6-8dab-0e3a376473ab/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                     </div>
                 </div>
             </div>
