--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 </div>
                                 
                                 <div class="item">
-                                  <img src="images\610GoogleStreetView.png" alt="610GoogleStreetView">
+                                  <img src="images\610GoogleStreetViewUPDATE.png" alt="610GoogleStreetViewUPDATE">
                                   
                                 </div>
                               </div>
