--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
                                 </div>
 
                                 <div class="item">
-                                  <img src= "images\stonewall_NYPL2.jpg" alt="stonewall_NYPL2">
+                                  <img src= "images\stonewall_NYPL2UPDATE.jpg" alt="stonewall_NYPL2UPDATE">
                                 </div>
 
                                 <div class="item">
-                                  <img src="images\stonewall_NYPL.jpg" alt="stonewall_NYPL">
+                                  <img src="images\stonewall_NYPLUPDATE.jpg" alt="stonewall_NYPLUPDATE">
                                 </div>
 
                                 <div class="item">
-                                  <img src="images\Stonewall_riots.jpg" alt="Stonewall_riots">
+                                  <img src="images\Stonewall_riotsUPDATE.jpg" alt="Stonewall_riotsUPDATE">
                                 </div>
                                 
                                 <div class="item">
