--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                               <!-- Wrapper for slides -->
                               <div class="carousel-inner" role="listbox">
                                 <div class="item active">
-                                  <img src="images\1928stompingground.jpg" alt="1928stompingground">
+                                  <img src="images\1928stompinggroundUPDATE.jpg" alt="1928stompinggroundUPDATE">
                                 </div>
 
                                 <div class="item">
