--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>< style="font-family:arial black;">BLOCK#610</title>
+    <title>BLOCK#610</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        block#610
+                        < style="font-family:arial black;">block#610
                     </a>
                 </li>
                 <li><a href="#Text1">History</a></li>
