--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        <style="font-family:arial-black;">BLOCK#610
+                        <h1><style="font-family:arial-black, gadget, sans-serif;">BLOCK#610</h1>
                     </a>
                 </li>
                 <li><a href="#Text1">History</a></li>
