--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Intro to Simple Sidebar</h1>
-                        <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        <h1>block#610[MANHATTAN]</h1>
+                        <p>This block is one of the most iconic hubs of LGBTQ activity in the world. Known as the birthplace of the struggle for LGBTQ rights in the United States, it attracts thousands of visitors every year. The aim of this exercise is to exemplify this locale, critically examine its demographic composition, and discern where local visitors come from.</p>
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Come out of the closet!</a>
                         <h3 id="Text1">History</h3>
                         Maybe a spot for a timeline, decade by decade?<br><br>
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
