--- a/index.html
+++ b/index.html
@@ -108,13 +108,18 @@
                             </div>
                         <hr>
                         <h3 id="Text3">Links</h3>
-                        <h4>Image Galleries</h4>
-                        <h4>Historical References</h4>
+                        <a href="url">http://www.outgoingNYC.com</a><br>
+                        <a href="url">http://www.thestonewallinnnyc.com/StonewallInnNYC/Welcome.html</a><br>
+                        <a href="url">http://www.theguardian.com/commentisfree/2010/jun/02/gay-lesbian-islamophobia</a>
                         <hr>
                         <h3 id="Text4">Statistics</h3>
                         <h4>Demographics</h4>
+                        <embed src="C:\Users\aha2141.GSAPP\Downloads\capture.png" width="517px" height="826px">
                         <h4>Land Use Summary</h4>
+                        <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/9f3750d2-0ce4-11e6-bd3c-0ecfd53eb7d3/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <h3 id="Text5">Sources</h3>
+                        <a href="url">http://www.outgoingNYC.com</a>
+                        <a href="url">https://www.hrw.org/report/2008/12/17/alien-legacy/origins-sodomy-laws-british-colonialism</a><br><br>
                         <iframe width="100%" height="800" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/ca6c6ef6-d06f-11e5-865e-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/b719ea40-026f-11e6-8dab-0e3a376473ab/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                     </div>
