--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
                         <hr>
                         <h3 id="Text4">Statistics</h3>
                         <h4>Demographics</h4>
-                        <embed src="C:\Users\aha2141.GSAPP\Downloads\capture.png" width="517px" height="826px">
+                        <img src="C:\Users\aha2141.GSAPP\Downloads\capture.png" width="826px" height="517px">
                         <h4>Land Use Summary</h4>
                         <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/9f3750d2-0ce4-11e6-bd3c-0ecfd53eb7d3/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <h3 id="Text5">Sources</h3>
-                        <a href="url">http://www.outgoingNYC.com</a>
+                        <a href="url">http://www.outgoingNYC.com</a><br>
                         <a href="url">https://www.hrw.org/report/2008/12/17/alien-legacy/origins-sodomy-laws-british-colonialism</a><br><br>
                         <iframe width="100%" height="800" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/ca6c6ef6-d06f-11e5-865e-0e98b61680bf/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/b719ea40-026f-11e6-8dab-0e3a376473ab/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
