--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <hr>
                         <h3 id="Text4">Statistics</h3>
                         <h4>Demographics</h4>
-                        <img src="C:\Users\aha2141.GSAPP\Downloads\capture.png" width="826px" height="517px">
+                        <img src="C:\Users\aha2141.GSAPP\Downloads\capture.png" alt="Discrimination" style="width:517px;height:826px;">
                         <h4>Land Use Summary</h4>
                         <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/9f3750d2-0ce4-11e6-bd3c-0ecfd53eb7d3/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <h3 id="Text5">Sources</h3>
