--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <hr>
                         <h3 id="Text4">Statistics</h3>
                         <h4>Demographics</h4>
-                        <img src="images/Capture.PNG" alt="capture.PNG">
+                        <img src="https://raw.githubusercontent.com/a-shehhi/tales-1/gh-pages/images/Capture.PNG" alt="capture.PNG">
                         <h4>Land Use Summary</h4>
                         <iframe width="100%" height="520" frameborder="0" src="https://columbialibraries.cartodb.com/u/aha2141/viz/9f3750d2-0ce4-11e6-bd3c-0ecfd53eb7d3/embed_map" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
                         <h3 id="Text5">Sources</h3>
